# vibe-gh-sync

./: CLAUDE.md  README.md  clear_tasks.py  config.json  main.py  pyproject.toml  test_main.py  vibe_gh_sync.py
.github/workflows/: test.yml
vibe_gh_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
