[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-gh-sync"
version = "0.1.0"
description = "Sync GitHub issues to Vibe Kanban tasks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff",
]

[project.scripts]
vibe-sync = "vibe_gh_sync:main"

[tool.setuptools]
py-modules = ["vibe_gh_sync"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
